tolk-tester/tests/invalid-syntax/err-3781.tolk
enum MyKind { }

/**
@compilation_should_fail
@stderr `enum` is not supported yet
*/
